[package]
name = "blau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
jsonwebtoken = "8.3.0"
openidconnect = "3.0.0"
serde = "1.0.160"
