[package]
name = "blau"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
openidconnect = "3.0.0"
serde = "1.0.160"

[profile.release]
codegen-units = 1
lto = true
